# txledger

./: .gitignore  Dockerfile  cli.py  fileloader.py  filereader.py  ledger.py  pyproject.toml  readme.md  requirements.txt  todo.md  transactions.csv  transactions2.csv
__tests__/: test_all.py
