[tool.poetry]
name = "txledger"
version = "0.1.0"
description = "A simple transaction ledger"
authors = ["Kuro Souza <=>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
